nyne/src/config/snapshots/nyne__config__tests__default_config_is_valid.snap
---
source: nyne/src/config/tests.rs
expression: config
---
passthrough_processes = ['git']

[repository]
storage_strategy = 'passthrough'

[sandbox]
hostname = 'nyne-sandbox'
bind_mounts = []
[sandbox.env]

[lsp]
enabled = true
cache_ttl = '5m'
diagnostics_timeout = '2s'
response_timeout = '10s'
custom = []
workspace_symbol_limit = 20
[lsp.servers]

[agent_files]
filenames = [
    'CLAUDE.md',
    'AGENTS.md',
]

[todo]
enabled = true
tags = [
    'FIXME',
    'SAFETY',
    'HACK',
    'XXX',
    'TODO',
]

[plugin]
