nyne/src/config/snapshots/nyne__config__tests__deserialize_minimal_config.snap
---
source: nyne/src/config/tests.rs
assertion_line: 21
expression: config
---
passthrough_processes = ['git']

[repository]
storage_strategy = 'passthrough'

[sandbox]
hostname = 'nyne-sandbox'
bind_mounts = []
[sandbox.env]

[agent_files]
filenames = [
    'CLAUDE.md',
    'AGENTS.md',
]

[plugin]
