nyne/src/config/snapshots/nyne__config__tests__deserialize_mount_config.snap
---
source: nyne/src/config/tests.rs
expression: config
---
[mount]
source_dir = '/tmp/src'
mountpoint = '/tmp/mnt'
excluded_patterns = []

[repository]
storage_strategy = 'passthrough'

[sandbox]
hostname = 'nyne-sandbox'
bind_mounts = []
state_root = '/tmp/nyne'
mount_root = '/code'
[sandbox.env]

[agent_files]
filenames = [
    'CLAUDE.md',
    'AGENTS.md',
]

[plugin]
