nyne/src/config/snapshots/nyne__config__tests__lsp_custom_server.snap
---
source: src/config/tests.rs
assertion_line: 93
expression: config.lsp.custom
---
[
    CustomLspServer {
        name: "ruff",
        command: "ruff",
        args: [
            "server",
        ],
        extensions: [
            "py",
        ],
    },
]
