nyne/src/config/snapshots/nyne__config__tests__lsp_defaults_when_omitted.snap
---
source: nyne/src/config/tests.rs
expression: config.lsp
---
enabled = true
cache_ttl = '5m'
diagnostics_timeout = '2s'
response_timeout = '10s'
custom = []
workspace_symbol_limit = 20

[servers]
