nyne/src/config/snapshots/nyne__config__tests__lsp_multiple_custom_servers.snap
---
source: src/config/tests.rs
assertion_line: 99
expression: config.lsp.custom
---
[
    CustomLspServer {
        name: "ruff",
        command: "ruff",
        args: [
            "server",
        ],
        extensions: [
            "py",
        ],
    },
    CustomLspServer {
        name: "deno",
        command: "deno",
        args: [
            "lsp",
        ],
        extensions: [
            "ts",
            "tsx",
        ],
    },
]
